[workspace]
resolver = "3"
members = [
	"crates/tuhka",
	"crates/leimu-spirv",
	"crates/leimu-proc",
	"crates/leimu-core",
	"crates/leimu-mem",
	"crates/leimu-ash",
	"crates/leimu-error",
	"crates/leimu-threads",
	"crates/leimu-log",
	"crates/leimu",
	"crates/leimu-geom",
	"crates/leimu-font",
	"crates/leimu-gui",
]

exclude = [
	"examples",
]
