[package]
name = "leimu"
version = "0.1.0"
edition = "2024"
description = "Modern and faithful Vulkan interface."
license = "MIT or Apache-2.0"
repository = "https://github.com/eikkukek/leimu"
readme = "README.md"
keywords = ["gpu", "graphics", "vulkan"]

[dependencies]
tuhka = { path = "../tuhka", features = ["window", "ext-load-with"] }
leimu-core = { path = "../leimu-core" }
leimu-spirv = { path = "../leimu-spirv" }
leimu-mem = { path = "../leimu-mem" }
leimu-proc = { path = "../leimu-proc" }
leimu-error = { path = "../leimu-error" }
leimu-log = { path = "../leimu-log" }
leimu-threads = { path = "../leimu-threads" }

raw-window-handle = "0.6.0"
parking_lot = "0.12.5"
shaderc = "0.9.1"
ahash = "0.8.12"

winit = { version = "0.30", optional = true }

[features]
event-loop = ["dep:winit"]
default = ["event-loop"]
