[package]
name = "leimu"
version = "0.1.0"
edition = "2024"
description = "Modern and faithful Vulkan interface."
license = "MIT or Apache-2.0"
repository = "https://github.com/eikkukek/leimu"
readme = "README.md"
keywords = ["gpu", "graphics", "vulkan"]

[dependencies]
tuhka = { path = "../tuhka", features = ["window", "ext-load-with"] }
leimu-spirv = { path = "../leimu-spirv" }
leimu-mem = { path = "../leimu-mem" }
leimu-proc = { path = "../leimu-proc" }

log = "0.4.29"
ahash = "0.8.12"
raw-window-handle = "0.6.0"
futures = "0.3.0"
crossbeam = "0.8.4"
parking_lot = "0.12.5"
arc-swap = "1.8.0"
shaderc = "0.9.1"

winit = { version = "0.30", optional = true }

[features]
event-loop = ["dep:winit"]
default = ["event-loop"]

[package.metadata.docs.rs]
all-features = true
