[package]
name = "tuhka"
version = "0.1.2"
edition = "2024"
description = "New up-to-date Vulkan bindings for Rust"
license = "MIT or Apache-2.0"
repository = "https://github.com/eikkukek/leimu"
readme = "README.md"
keywords = ["bindings", "graphics", "vulkan"]
categories = ["graphics", "api-bindings", "external-ffi-bindings", "rendering::graphics-api"]


[dependencies]
libloading = "0.9.0"
raw-window-handle = { version = "0.6.2", optional = true }
raw-window-metal = { version = "1.1.0", optional = true }

[features]
window = ["dep:raw-window-handle", "dep:raw-window-metal"]
ext-load-with = []
